src/MiniJava/Tests/DriverTests/parse_errors/nonascii_characters.mj
class NonasciiCharacters
{
    public static void main()
    {
הצהצהצהצהצהצ	ASDSADDASDSADS	צהצהצהצהצהצהצהצהצהצהצהצ
         System.out.println(-1);
    }
}
/*
צהצהצהצהצהצהצהצהצהצהצהצ DSDSDS צהצהצהצהצהצהצהצהצהצהצהצ
*/
// צהצהצהצהצהצהצהצהצהצהצהצ DSDSDS צהצהצהצהצהצהצהצהצהצהצהצ
