src/MiniJava/Tests/DriverTests/parse_errors/nonascii_characters.err
nonascii_characters.mj:5:0-57: error: Nonprintable or non-ASCII characters in source file
    ????????????    ASDSADDASDSADS    ???????????????????????
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
nonascii_characters.mj:6:9-15: error: Syntax error, unexpected System
             System.out.println(-1);
             ^^^^^^
nonascii_characters.mj:10:0-54: error: Nonprintable or non-ASCII characters in source file
    ??????????????????????? DSDSDS ???????????????????????
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
nonascii_characters.mj:12:3-57: error: Nonprintable or non-ASCII characters in source file
    // ??????????????????????? DSDSDS ???????????????????????
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

4 errors in total.
